peg/robo.peg
start =
  expression*

expression =
  grammatical
  /mathExp
  /atom

grammatical =
  check
  /until
  /do
  /both
  /either
  /set
  /spacedCommand
  /comparison
  /"(" first:spacedExpr rest:spacedExpr* ")"
  { return [first].concat(rest) ;}


check =
  "check" space* c:spacedExpr "yes:"space* y:grammatical space* "no:"space* n:grammatical space*
  { return ["check", c, y, n]; }

until =
  "until" spacedExpr spacedExpr

do =
  "do" space* "(" first:spacedExpr rest:spacedExpr* ")"
  { return ["do", [first].concat(rest)]; }


both =
  "both:" a:spacedExpr "and:" b:spacedExpr
  { return ["both", a, b]; }

either =
  "either:" a:spacedExpr "or:" b:spacedExpr
  { return ["either", a, b]; }

set =
  "set" space+ a:atom ":" e:spacedExpr
  { return ["set", a, e]; }

comparison =
  l:comparisonExp space* "and" space* r:comparison
  { return ["and", l, r]; }
  /l:comparisonExp space* "or" space* r:comparison
  { return ["or", l, r]; }
  /comparisonExp

comparisonExp =
  mx:mathExp space* "=" space* eq:mathExp
  { return ["=", mx, eq]; }
  /mx:mathExp space* "<" space* lt:mathExp
  { return  ["<", mx, lt]; }
  /mx:mathExp space* ">" space* gt:mathExp
  { return [">", mx, gt]; }
  /mathExp
  / "(" space* c:comparison space* ")"
  { return c; }

spacedExpr =
  space* e:expression space*
  { return e; }

bool =
  "true"
  /"false"

validchar
    = [0-9a-zA-Z_?!\@#$%^&.]

atom =
    chars:validchar+
        { return chars.join(""); }

spacedCommand =
  space* c:command space*
  { return c; }

space =
  " " / "\n" / "\t"

command =
  "move" / "left" / "right" / "fire" / "idle" / "locateSelf" / "locateEnemy"

mathExp =
  additive

additive =
  left:multiplicative space* "+" space* right:additive
  { return ["+", left, right]; }
  /left:multiplicative space* "-" space* right:additive
  { return ["-", left, right]; }
  / multiplicative

multiplicative =
  left:primary space* "*" space* right:multiplicative
  { return ["*", left, right]; }
  /left:primary space* "/" space* right:multiplicative
  { return ["/", left, right]; }
  / primary

primary
  = integer
  / "(" space* p:mathExp space* ")"
  { return p; }
  /atom

integer =
  sign:"-"? digits:[0-9]+
  { return parseInt(sign+digits.join(""), 10); }
